--- a/views/admin/editpostagens.handlebars
+++ b/views/admin/editpostagens.handlebars
@@ -6,16 +6,17 @@
 
 <div class="card">
      <div class="card-body">
-          <h4>Nova postagem: </h4>
-          <form action="/admin/postagens/nova" method="post">
+          <h4>Editar postagem: </h4>
+          <form action="/admin/postagem/edit" method="post">
+              <input type="hidden" name="id" value="{{postagem._id}}"  >
               <label for="titulo">Título: </label>
-              <input type="text" name="titulo" id="titulo" class="form-control" required>
+              <input type="text" id="titulo" name="titulo"  class="form-control" required value="{{postagem.titulo}}">
               <label for="slug">Slug: </label>
-              <input type="text" name="slug" id="slug" class="form-control" required>
+              <input type="text" name="slug" id="slug" class="form-control" value="{{postagem.slug}}" required >
               <label for="descricao">Descrição: </label>
-              <input type="text" name="descricao" id="descricao" class="form-control" required>
+              <input type="text" name="descricao" id="descricao" class="form-control" value="{{postagem.descricao}}" required>
               <label for="conteudo">Conteúdo: </label>
-              <textarea name="conteudo" id="conteudo" class="form-control" required></textarea>
+              <textarea name="conteudo" id="conteudo" class="form-control"  required>{{postagem.conteudo}}</textarea>
               <label for="categoria">Categoria: </label>
               <select name="categoria" id="" class="custom-select mt-2">
                    {{#each categorias}}
@@ -24,7 +25,7 @@
                       <option value="0">Nenhuma categoria registrada</option>
                    {{/each}}
               </select> <br>
-              <button class="btn btn-success mt-2" type="submit">Criar postagem</button>
+              <button class="btn btn-success mt-2" type="submit">Editar postagem</button>
           </form>
      </div>
 </div>
