--- a/views/inicio.handlebars
+++ b/views/inicio.handlebars
@@ -1,5 +1,9 @@
-<h1>{{postagem.titulo}}</h1>
-<hr>
-<small>Data de publicação: {{postagem.data}}</small>
-<hr>
-{{postagem.conteudo}}
+<div class="card">
+    <div class="card-body">
+        <h1>{{postagem.titulo}}</h1>
+        <hr>
+        <small>Data de publicação: {{postagem.data}}</small>
+        <hr>
+        {{postagem.conteudo}}
+    </div>
+</div>
