--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,9 @@
 
 <div class="bg-light p-5 rounded-lg m-3 mt-4">
-  <h1 class="display-4">Bem-vindo ao Blog do Node</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <h1 class="display-4">Bem-vindo ao Blog Tech</h1>
+  <p class="lead">Explore o fascinante mundo das linguagens de programação em nosso blog! Aqui você encontrará postagens detalhadas sobre diversas linguagens de programação, organizadas em categorias para facilitar a navegação e o aprendizado. Nosso objetivo é ajudar desenvolvedores, desde iniciantes até especialistas, a expandirem seus conhecimentos e habilidades no universo da programação.</p>
   <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p></p>
   <a class="btn btn-primary btn-lg" href="#" role="button">Crie uma conta</a>
 </div>
 
